# petstore/src/main/java/com/rkcreadev/demo/petstore/controller/PetController.java
@@ -1,12 +1,15 @@
 package com.rkcreadev.demo.petstore.controller;
 
 import com.rkcreadev.demo.petstore.api.controller.PetApi;
+import com.rkcreadev.demo.petstore.api.model.DTOPet;
 import com.rkcreadev.demo.petstore.api.model.ModelApiResponse;
-import com.rkcreadev.demo.petstore.api.model.Pet;
+import com.rkcreadev.demo.petstore.api.model.PetStatus;
+import com.rkcreadev.demo.petstore.repository.PetRepository;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Pet controller
@@ -14,8 +17,19 @@ import java.util.List;
 @RestController
 public class PetController implements PetApi {
 
+    private PetRepository petRepository;
+
+    /**
+     * Autowiring constructor
+     *
+     * @param petRepository pet repository
+     */
+    public PetController(PetRepository petRepository) {
+        this.petRepository = petRepository;
+    }
+
     @Override
-    public ResponseEntity<ModelApiResponse> addPet(Pet body) {
+    public ResponseEntity<ModelApiResponse> addPet(DTOPet body) {
         return getOkWithMessage("Successful ADD pet");
     }
 
@@ -25,17 +39,23 @@ public class PetController implements PetApi {
     }
 
     @Override
-    public ResponseEntity<List<Pet>> findPetsByStatus(List<String> status) {
+    public ResponseEntity<List<DTOPet>> findPetsByStatus(List<String> statuses) {
+        List<PetStatus> statusList = statuses.stream()
+                .map(PetStatus::fromValue)
+                .collect(Collectors.toList());
+
+        petRepository.findByPetStatus(statusList);
+
         return null;
     }
 
     @Override
-    public ResponseEntity<Pet> getPetById(Long petId) {
+    public ResponseEntity<DTOPet> getPetById(Long petId) {
         return null;
     }
 
     @Override
-    public ResponseEntity<ModelApiResponse> updatePet(Pet body) {
+    public ResponseEntity<ModelApiResponse> updatePet(DTOPet body) {
         return getOkWithMessage("Successful UPDATE pet");
     }
 
