# swagger-api/src/main/resources/swagger.yaml
@@ -44,7 +44,7 @@ paths:
         description: "Pet object that needs to be added to the store"
         required: true
         schema:
-          $ref: "#/definitions/Pet"
+          $ref: "#/definitions/DTOPet"
       responses:
         200:
           description: "Successful operation"
@@ -70,7 +70,7 @@ paths:
         description: "Pet object that needs to be added to the store"
         required: true
         schema:
-          $ref: "#/definitions/Pet"
+          $ref: "#/definitions/DTOPet"
       responses:
         200:
           description: "Successful operation"
@@ -111,7 +111,7 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/Pet"
+              $ref: "#/definitions/DTOPet"
         400:
           description: "Invalid status value"
   /pet/{petId}:
@@ -134,7 +134,7 @@ paths:
         200:
           description: "successful operation"
           schema:
-            $ref: "#/definitions/Pet"
+            $ref: "#/definitions/DTOPet"
         400:
           description: "Invalid ID supplied"
         404:
@@ -170,7 +170,7 @@ paths:
           description: "Pet not found"
 
 definitions:
-  Pet:
+  DTOPet:
     type: "object"
     properties:
       id:
